Fixed styling on mobile view

--- a/angular/src/public/Pages/appointment/cancel/cancel.component.scss
+++ b/angular/src/public/Pages/appointment/cancel/cancel.component.scss
@@ -24,8 +24,6 @@
 //web view
 @media screen and (min-width: 1024px) {
   .card {
-    margin-top: 225px;
-    margin-bottom: 130px;
     height: -webkit-calc(100% - (60px + 45px)) !important;
   }
 }
