--- a/angular/src/public/Pages/appointment/form-wizard/form-wizard.component.scss
+++ b/angular/src/public/Pages/appointment/form-wizard/form-wizard.component.scss
@@ -94,6 +94,10 @@ h4 {
     }
 }
 
+.hr {
+    background-color: #e86724;
+}
+
 //web view
 @media screen and (min-width: 1024px) {
     .form-label {
